--- a/views/css/style.sass
+++ b/views/css/style.sass
@@ -114,8 +114,10 @@ code, pre, kbd, samp
 
 body, select, input, textarea
   color: #444
+  background-color: black
   /* set your base font here, to apply evenly
   /* font-family: Georgia, serif
+  font-family: "Helvetica Neue"
 
 /* Headers (h1,h2,etc) have no default font-size or margin,
  * you'll want to define those yourself.
@@ -378,3 +380,12 @@ button
     widows: 3
   h2, h3
     page-break-after: avoid
+
+h1
+  font-size: 400%
+  width: 100%
+  position: absolute
+  top: 0
+  left: 0
+  z-index: 40
+  color: #FF5E99
