--- a/views/css/style.sass
+++ b/views/css/style.sass
@@ -383,9 +383,19 @@ button
 
 h1
   font-size: 400%
+  margin: 20px
   width: 100%
-  position: absolute
-  top: 0
-  left: 0
+  //position: absolute
+  //top: 0
+  //left: 0
   z-index: 40
   color: #FF5E99
+  position: relative
+
+h2
+  color: white
+  font-size: 200%
+  width: 80%
+  position: relative
+  z-index: 40
+  background-color: rgba(0,0,0,0.3)
