--- a/views/layout.haml
+++ b/views/layout.haml
@@ -32,9 +32,13 @@
   %script{:src => "/js/underscore-min.js"}
   %script{:src => "/js/raphael-min.js"}
   %script{:src => "js/muzak.js"}
-  %script{:src => "js/eventdata.js"}
+  %script{:src => "js/eventdata.js?v=12"}
   <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
 %body
+  %h1#title
+  %h2#description
+
+
   #container.container_12
     %header.grid_12
     #main.grid_12
