--- a/views/css/style.sass
+++ b/views/css/style.sass
@@ -393,9 +393,16 @@ h1
   position: relative
 
 h2
+  margin-left: 20px
   color: white
   font-size: 200%
   width: 80%
   position: relative
   z-index: 40
   background-color: rgba(0,0,0,0.3)
+
+h3
+  position: absolute
+  bottom: 10px
+  right: 10px
+  z-index: 30
