--- a/views/layout.haml
+++ b/views/layout.haml
@@ -33,10 +33,14 @@
   %script{:src => "/js/raphael-min.js"}
   %script{:src => "js/muzak.js"}
   %script{:src => "js/eventdata.js?v=12"}
-  <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script>
 %body
   %h1#title
   %h2#description
+
+  %h3
+    %a{:href => "#"}
+      Shut It!
+
 
 
   #container.container_12
