--- a/views/index.haml
+++ b/views/index.haml
@@ -46,6 +46,11 @@
       stopnotes();
       stopnotes();
       stopnotes();
+      stopnotes();
+      stopnotes();
+      stopnotes();
+      stopnotes();
+      stopnotes();
       $('h1#title').text(desc);
       $('h2').text(text);
       play_sequence(text.slice(0,16), text.slice(16,32));
